// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BorderCard renders default card 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 80px;
  height: 80px;
  border: solid;
  border-color: #09111C;
  background: #F0F1F3;
  border-radius: 8px;
  border-width: 1px;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`BorderCard renders with different borderRadius token 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 80px;
  height: 80px;
  border: solid;
  border-color: #09111C;
  background: #F0F1F3;
  border-radius: 50%;
  border-width: 1px;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`BorderCard renders with different borderWidth token 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 80px;
  height: 80px;
  border: solid;
  border-color: #09111C;
  background: #F0F1F3;
  border-radius: 8px;
  border-width: 0;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`BorderCard renders with different boxShadow token 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 80px;
  height: 80px;
  border: solid;
  border-color: #09111C;
  background: #F0F1F3;
  border-radius: 8px;
  border-width: 0;
  box-shadow: 0 0 2px 0 rgba(10,10,10,0.08);
  background-color: white;
  margin: 0 0 20px 15px;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;
